# path-finding-experiment

./: Cargo.toml  build.rs  index.html  mise.toml
docs/: index.html  pk-chat-agent-afe9a6e5d5e36ffe.js  pk-chat-agent-afe9a6e5d5e36ffe_bg.wasm
maps/: desert_oasis.json  empty_grass.json  lake_small.json  lake_trees.json  maze_walls.json
src/: agent.rs  animation.rs  app.rs  events.rs  lib.rs  map.rs  map_type.rs  openrouter.rs
src/board/: board_input.rs  board_renderer.rs  mod.rs
src/editor/: editor_input.rs  editor_operations.rs  editor_state.rs  editor_ui.rs  mod.rs
src/rendering/: mod.rs  sprites.rs  tiles.rs  ui.rs
src/tool_execution/: mod.rs  tool_execution_manager.rs
src/ui/: agent_panel.rs  mod.rs  tile_info_panel.rs
