[package]
name = "pk-chat-agent"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
eframe = "0.28"
egui = "0.28"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["console"] }
futures = "0.3"
bytes = "1.0"
async-stream = "0.3"
web-time = "1.0"
